Fix hireme spacing, add gradient to index

--- a/public/customStyle.css
+++ b/public/customStyle.css
@@ -114,6 +114,14 @@
     }
 }
 
+/* Index */
+
+#hero-name {
+  background: -webkit-linear-gradient(10deg, #86c4d5, #a4c3e1, #3F76B5);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 #hero-section {
     height: 75vh;
 } 
